--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sample HTML Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background: #007BFF;
+      color: white;
+      padding: 15px;
+      text-align: center;
+      border-radius: 8px;
+    }
+    main {
+      margin-top: 20px;
+    }
+    section {
+      background: white;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    footer {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
 
+  <header>
+    <h1>Welcome to My Sample Page</h1>
+  </header>
+
+  <main>
+    <section>
+      <h2>About</h2>
+      <p>This is a simple HTML page with some styling.</p>
+    </section>
+
+    <section>
+      <h2>Links</h2>
+      <ul>
+        <li><a href="https://www.example.com">Example Website</a></li>
+        <li><a href="https://www.google.com">Google</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 My Sample Page
+  </footer>
+
+</body>
+</html>
